fix(variables): Update hexadecimal colors for better contrast

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,17 +8,17 @@ $pokemon-gradient: var(--pokemon-gradient-opacity);
 // Pokemon type colors - Keep as map for @each loops
 $pokemon-types: (
   normal: #a8a878,
-  fire: #f08030,
-  water: #6890f0,
+  fire: #c03028,
+  water: #0f3999,
   electric: #f8d030,
-  grass: #78c850,
-  ice: #98d8d8,
-  fighting: #c03028,
+  grass: #345a21,
+  ice: #1d5a5a,
+  fighting: #683008,
   poison: #a040a0,
   ground: #e0c068,
-  flying: #a890f0,
+  flying: #4119b8,
   psychic: #f85888,
-  bug: #a8b820,
+  bug: #40450c,
   rock: #b8a038,
   ghost: #705898,
   dragon: #7038f8,
